Fix windows scripts